# marco-silva.com

./: .gitignore  Containerfile  conftest.py  package.json  podman-compose.yml  pyproject.toml
.github/workflows/: django.yml
.yarn/: build-state.yml
pages/: _app.js  index.js
pages/posts/: [slug].js
posts/: hello.md
static/: index.html  index2.html
static/css/: styles.css
templates/: base.html  cv.html  index.html
website/: dev_settings.template  settings.py  urls.py
