[project]
name = "marco-silva.com"
version = "0.1.0"
description = "my website 😄"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-htmx>=1.22.0",
    "psycopg>=3.2.5",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "django-debug-toolbar>=5.0.1",
    "django-stubs>=5.1.3",
    "factory-boy>=3.3.3",
    "faker>=37.0.0",
    "pytest-django>=4.10.0",
]
